--- a/composer.json
+++ b/composer.json
@@ -70,5 +70,7 @@
     "require-dev": {
         "symfony/stopwatch": "6.3.*",
         "symfony/web-profiler-bundle": "6.3.*"
-    }
+    },
+    "modules": [],
+    "schemaVersion": ""
 }
